--- a/static/css/accounting/outlay.css
+++ b/static/css/accounting/outlay.css
@@ -1,3 +1,5 @@
 @import "accounting_outlay_list.css";
 @import "accounting_outlay_detail.css";
 @import "accounting_outlay_create.css";
+@import "accounting_outlay_salary_list.css";
+@import "accounting_outlay_salary_create.css";
