--- a/static/css/accounting/accounting_outlay_create.css
+++ b/static/css/accounting/accounting_outlay_create.css
@@ -55,6 +55,9 @@
     border-radius: 0.5rem;
 }
 
+.outlay_create_submit:hover{
+    cursor: pointer;
+}
 .outlay_create_blank{
     height: 50rem;
 }
