--- a/accounting/templates/accounting/salary_detail.html
+++ b/accounting/templates/accounting/salary_detail.html
@@ -1,11 +1,194 @@
-salary detail
-<br>
-<p>이름 : {{member.name}}</p>
-{% for salary in daily_salary %}
-    
-    <span>날짜  : {{ salary.date }}</span>
-    <span>상여금 : {{ salary.bonus}}</span>
-    <span>추가금 : {{ salary.bonus}}</span>
-    <span><a href="">주문</a> : {{ salary.order_id}}</span>
-    <br>
-{% endfor %}
+{% extends 'base.html' %}
+{% load static %}
+{% load custom_tags %}
+
+{% block head %}
+    <link href="{% static 'css/accounting/outlay.css' %}" rel="stylesheet" type="text/css">
+{% endblock %}
+
+{% block content %}
+
+<div class="main_box">
+    <aside>
+        <div class="aside_box">
+            <div class="aside_title">
+                <div class="aside_title_font">경리</div>
+            </div>
+            <div class="aside_contents">
+                <a href="{% url 'accounting:income_list' %}">수입현황</a>
+            </div>
+            <div class="aside_contents">
+                <a href="{% url 'accounting:outlay_list' %}">지출현황</a>
+            </div>
+            <div class="aside_contents">
+                <a href="{% url 'accounting:outlay_create' %}">지출작성</a>
+            </div>
+            <div class="aside_contents">
+                <a href="{% url 'accounting:salary_list' %}">급여현황</a>
+            </div>
+            <div class="aside_contents">
+                <a href="{% url 'accounting:salary_create' %}">급여작성</a>
+            </div>
+        </div>
+    </aside>
+
+    <section class="main_section">
+        <div class="top_box">
+            <div class="top_box_title">{{selected_year}}년 {{selected_month}}월 {{member.name}} 급여명세서</div>
+            <div class="accounting_top_select">
+                <form action="" class="accounting_outlay_search_form">
+                    <select name="year" class="accounting_outlay_search_date">
+                        <option></option>
+                        <option value="2021" {% if '2021' == selected_year %} selected {% endif %}>2021년</option>
+                        <option value="2022" {% if '2022' == selected_year %} selected {% endif %}>2022년</option>
+                        <option value="2023" {% if '2023' == selected_year %} selected {% endif %}>2023년</option>
+                        <option value="2024" {% if '2024' == selected_year %} selected {% endif %}>2024년</option>
+                        <option value="2025" {% if '2025' == selected_year %} selected {% endif %}>2025년</option>
+
+                    </select>
+                    <select name="month" class="accounting_outlay_search_date">
+                        <option></option>
+                        {% for i in "x"|rjust:"12" %}
+                            <option value="{% if forloop.counter < 10 %}0{% endif %}{{forloop.counter}}" {% if forloop.counter == int_selected_month %} selected {% endif %}>{{forloop.counter}}월</option>
+                        {% endfor %}
+                    </select>
+                    <input type="submit" class="accounting_outlay_search_button" value="">
+                </form>
+            </div>
+        </div>
+        <div class="mid_box">
+            <form method="POST" action="" class="salary_detail_form">
+                {% csrf_token %}
+                <div class="salary_detail__mid_content__box">
+                    <div class="salary_detail__mid_content__header">
+                        <div class="salary_detail__mid__header_title">지급항목</div>
+                        <div class="salary_detail__mid__header_title">공제항목</div>
+                    </div>
+                    <div class="salary_detail__mid_content__content_box">
+                        <div class="salary_detail__mid_content__content_box__content">기본급</div>
+                        <div class="salary_detail__mid_content__content_box__content">
+                            <input type="number" name="base" value="{{monthly_salary.base}}" class="salary_detail__mid_content__content_box__input">
+                        </div>
+                        <div class="salary_detail__mid_content__content_box__content">국민연금</div>
+                        <div class="salary_detail__mid_content__content_box__content">
+                            <input type="number" name="gukmin" value="{{monthly_salary.gukmin}}" class="salary_detail__mid_content__content_box__input">
+                        </div>                    
+                    </div>
+                    <div class="salary_detail__mid_content__content_box">
+                        <div class="salary_detail__mid_content__content_box__content">상여금</div>
+                        <div class="salary_detail__mid_content__content_box__content">{{bonus}}</div>
+                        <div class="salary_detail__mid_content__content_box__content">건강보험</div>
+                        <div class="salary_detail__mid_content__content_box__content">
+                            <input type="number" name="gungang" value="{{monthly_salary.gungang}}" class="salary_detail__mid_content__content_box__input">
+                        </div>                    
+                    </div>
+                    <div class="salary_detail__mid_content__content_box">
+                        <div class="salary_detail__mid_content__content_box__content">추가금</div>
+                        <div class="salary_detail__mid_content__content_box__content">{{additional}}</div>
+                        <div class="salary_detail__mid_content__content_box__content">장기요양보험</div>
+                        <div class="salary_detail__mid_content__content_box__content">
+                            <input type="number" name="zanggi" value="{{monthly_salary.zanggi}}" class="salary_detail__mid_content__content_box__input">
+                        </div>                    
+                    </div>
+                    <div class="salary_detail__mid_content__content_box">
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content">고용보험</div>
+                        <div class="salary_detail__mid_content__content_box__content">
+                            <input type="number" name="goyong" value="{{monthly_salary.goyong}}" class="salary_detail__mid_content__content_box__input">
+                        </div>                    
+                    </div>
+                    <div class="salary_detail__mid_content__content_box">
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content">소득세</div>
+                        <div class="salary_detail__mid_content__content_box__content">
+                            <input type="number" name="income_tax" value="{{monthly_salary.income_tax}}" class="salary_detail__mid_content__content_box__input">
+                        </div>                    
+                    </div>
+                    <div class="salary_detail__mid_content__content_box">
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content">주민세</div>
+                        <div class="salary_detail__mid_content__content_box__content">
+                            <input type="number" name="resident_tax" value="{{monthly_salary.resident_tax}}" class="salary_detail__mid_content__content_box__input">
+                        </div>                    
+                    </div>
+                    <div class="salary_detail__mid_content__content_box">
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content"></div>                    
+                    </div>
+                    <div class="salary_detail__mid_content__content_box">
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content"></div>                    
+                    </div>
+                    <div class="salary_detail__mid_content__content_box">
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content"></div>                    
+                    </div>
+                    <div class="salary_detail__mid_content__content_box">
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content"></div>          
+                    </div>
+                    <div class="salary_detail__mid_content__content_box">
+                        <div class="salary_detail__mid_content__content_box__content salary_detail__mid_content__content_box__content_total">급여 총액</div>
+                        <div class="salary_detail__mid_content__content_box__content salary_detail__mid_content__content_box__content_total">{{ monthly_salary.base|add:bonus|add:additional }}</div>
+                        <div class="salary_detail__mid_content__content_box__content salary_detail__mid_content__content_box__content_total">공제 총액</div>
+                        <div class="salary_detail__mid_content__content_box__content salary_detail__mid_content__content_box__content_total">{{ monthly_salary.deductible }}</div>                    
+                    </div>
+                    <div class="salary_detail__mid_content__content_box">
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content"></div>
+                        <div class="salary_detail__mid_content__content_box__content salary_detail__mid_content__content_box__content_total">실 수령액</div>
+                        <div class="salary_detail__mid_content__content_box__content salary_detail__mid_content__content_box__content_total">{{ monthly_salary.total }}</div>                    
+                    </div>
+                </div>
+                <input type="submit" value="수정" class="outlay_create_submit">
+            </form>
+
+
+            <div class="salary_create__mid__mid_title">급여내역</div>
+            <div class="outlay_detail_mid_content__header salary_detail_mid_content__header">
+                <div class="salary_create__mid_box__header_title">날짜</div>
+                <div class="salary_create__mid_box__header_title">상여금</div>
+                <div class="salary_create__mid_box__header_title">추가금</div>
+                <div class="salary_create__mid_box__header_title">총합</div>
+                <div class="salary_create__mid_box__header_title">비고</div>
+            </div>
+            
+            {% for salary in daily_salary %}
+                <a href="/accounting/outlay/salary/create/?date={{salary.date}}">
+                    <div class="outlay_detail_mid_kinds__content_box salary_create_content_box">
+                        <div class="salary_create__mid_box__content">
+                            <div class="salary_detail__mid_box__content_input">{{ salary.date }}</div>
+                        </div>
+                        <div class="salary_create__mid_box__content">
+                            <div class="salary_detail__mid_box__content_input">{{ salary.bonus }}</div>
+                        </div>
+                        <div class="salary_create__mid_box__content">
+                            <div class="salary_detail__mid_box__content_input">{{ salary.additional }}</div>
+                        </div>
+                        <div class="salary_create__mid_box__content">
+                            <div class="salary_detail__mid_box__content_input">{{ salary.total }}</div>
+                        </div>
+                        <div class="salary_create__mid_box__content">
+                            <div class="salary_detail__mid_box__content_input">{{ salary.remark }}</div>
+                        </div>
+                    </div>
+                </a>
+            {% endfor %}
+
+        </div>
+        <div class="blank"></div>
+    </section>
+
+{% endblock %}
+
