--- a/static/css/accounting/outlay.css
+++ b/static/css/accounting/outlay.css
@@ -3,3 +3,4 @@
 @import "accounting_outlay_create.css";
 @import "accounting_outlay_salary_list.css";
 @import "accounting_outlay_salary_create.css";
+@import "accounting_outlay_salary_detail.css";
