--- a/accounting/templates/accounting/salary_create.html
+++ b/accounting/templates/accounting/salary_create.html
@@ -46,11 +46,10 @@
         <div class="mid_box">
                 <div class="outlay_detail_mid_content__header">
                     <div class="salary_create__mid_box__header_title">이름</div>
-                    <div class="salary_create__mid_box__header_title">기본급</div>
-                    <div class="salary_create__mid_box__header_title">공제금</div>
-                    <div class="salary_create__mid_box__header_title salary_create__mid_box__header_title_color">상여금</div>
-                    <div class="salary_create__mid_box__header_title salary_create__mid_box__header_title_color">추가금</div>
-                    <div class="salary_create__mid_box__header_title salary_create__mid_box__header_title_color">상여 + 추가</div>
+                    <div class="salary_create__mid_box__header_title">상여금</div>
+                    <div class="salary_create__mid_box__header_title">추가금</div>
+                    <div class="salary_create__mid_box__header_title">총합</div>
+                    <div class="salary_create__mid_box__header_title">비고</div>
                 </div>
 
                 <form method="POST" action="" class="salary_create_form">
@@ -61,12 +60,6 @@
                             <div class="salary_create__mid_box__content_input">{% if member.monthly_salary.member_id.name %}{{member.monthly_salary.member_id.name}} {% else %} {{member.name}} {% endif %} </div>
                         </div>
                         <div class="salary_create__mid_box__content">
-                            <input type="number" name="base" class="salary_create__mid_box__content_input" value="{{member.monthly_salary.base}}">원
-                        </div>
-                        <div class="salary_create__mid_box__content">
-                            <input type="number" name="deductible" class="salary_create__mid_box__content_input" value="{{member.monthly_salary.deductible}}">원
-                        </div>
-                        <div class="salary_create__mid_box__content">
                             <input type="number" name="bonus" class="salary_create__mid_box__content_input" value="{{member.bonus}}">원
                         </div>
                         <div class="salary_create__mid_box__content">
@@ -75,37 +68,15 @@
                         <div class="salary_create__mid_box__content">
                             <div class="salary_create__mid_box__content_input">{{member.total}}</div>
                         </div>
+                        <div class="salary_create__mid_box__content">
+                            <input type="text" name="remark" class="salary_create__mid_box__content_input salary_create__mid_box__content_input_text" value="{{member.remark}}">
+                        </div>
                     </div>
                     {% endfor %}
                     <input type="submit" class="outlay_create_submit">
                 </form>
         </div>
     </section>
-
-
-    <form action='', method='POST'>
-        {% csrf_token %}
-        {% if daily_form|length == 0 %}
-            {% for member in member_list %}
-                <span>번호 : {{ member.pk }}</span>
-                <span>이름 : {{ member.name }}</span>
-                {{ form }}
-                <br>
-            {% endfor %}
-        {% else %}
-    
-        {% for daily in daily_form %}
-            <span>번호 : {{ daily.instance.monthly_salary.member_id.pk }}</span>
-            <span>이름 : {{ daily.instance.monthly_salary.member_id.name }}</span>
-            {{ daily }}
-            <br>
-        {% endfor %}
-        <!--form 을 여러개 추가 할 수 있어야됨 지금은 하나밖에 안됨-->
-        <!--자바스크립트로 추가하기-->
-        {% endif %}
-        <input type="submit" value="등록">
-    </form>
-    
 
 
 
