--- a/static/css/accounting/accounting_outlay_salary_create.css
+++ b/static/css/accounting/accounting_outlay_salary_create.css
@@ -1,9 +1,9 @@
 .salary_create__mid_box__header_title{
-    width: 18rem;
+    width: 20rem;
     text-align: center;
 }
-.salary_create__mid_box__header_title:nth-child(1){
-    width: 20rem;
+.salary_create__mid_box__header_title:nth-child(5){
+    width: 30rem;
     text-align: center;
 }
 
@@ -21,7 +21,7 @@
     align-items: center;
 }
 .salary_create__mid_box__content{
-    width: 18rem;
+    width: 20rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -29,12 +29,16 @@
     font-size: 1.5rem;
 }
 
-.salary_create__mid_box__content:nth-child(1){
-    width: 20rem;
+.salary_create__mid_box__content:nth-child(5){
+    width: 30rem;
 }
 
 .salary_create__mid_box__content_input{
     text-align: center;
 
     width: 7rem;
+}
+
+.salary_create__mid_box__content_input_text{
+    width: 20rem;
 }
